feat: Update Javadoc comments and code remarks for better readability across multiple services including BotChainService, ChatEnhanceService, SseEmitterUtil, WorkflowClient, and others; add author tags consistently; improve log messages with English